[package]
name = "space-runners"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[features]
no-entrypoint = []

[dependencies]
thiserror = "1.0"
borsh = "0.9.1"
solana-program = "1.8.5"
spl-token = { version = "3.2", features = [ "no-entrypoint" ] }

[lib]
crate-type = ["cdylib", "lib"]
